@@ -3,3 +3,4 @@ application_packages=co.elastic.apm
 ship_agent_logs=false
 log_level=DEBUG
 cloud_provider=NONE
+warmup_byte_buddy=false
