@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.10.0</version>
+            <version>2.17.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
