@@ -119,7 +119,7 @@
         <version.jetty-server>9.4.11.v20180605</version.jetty-server>
         <version.json-schema-validator>1.0.65</version.json-schema-validator>
         <!-- Byte Buddy and ASM must be kept in sync -->
-        <version.byte-buddy>1.12.6</version.byte-buddy>
+        <version.byte-buddy>1.12.7</version.byte-buddy>
         <version.asm>9.2</version.asm>
         <version.cucumber>5.4.0</version.cucumber>
 
