@@ -35,6 +35,8 @@ endif::[]
 * Fix runtime attach with some docker images - {pull}2385[#2385]
 * Restore dynamic capability to `log_level` config for plugin loggers - {pull}2384[#2384]
 * Fix slf4j-related `LinkageError` - {pull}2390[#2390]
+* Fix possible deadlock occurring when Byte Buddy reads System properties by warming up bytecode instrumentation code
+paths. The BCI warmup is on by default and may be disabled through the internal `warmup_byte_buddy` config option - {pull}2368[#2368]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
